[package]
name = "docker-ipam-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = '0.2.1'
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"]}
unqlite = "1.5.0"
rocket = "0.4.5"
gen-iter = "0.2.1"

